plugins {
    id 'java'
    id 'application'
}

group = 'com.example'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17  // or 22 if you're using that
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    // JUnit 5 for testing
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
    implementation 'com.google.code.gson:gson:2.10.1'
}

test {
    useJUnitPlatform()
    jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED'
}

application{
    mainClass = 'com.example.Main'
}